Code clean up (#400)